<resources>
    <string name="app_name">Bio Education</string>
    <string name="text_pendahuluan">Pendahuluan</string>
    <string name="text_materi">Materi</string>
    <string name="text_evaluasi">Evaluasi</string>
    <string name="text_video">Video</string>
    <string name="text_petunjuk">Petunjuk</string>
    <string name="text_profil">Profil</string>
    <string name="text_intro">INTRO</string>
    <string name="text_pengantar">Fitur Aplikasi Biologi Education Ini Terdiri Dari Menu: Pendahuluan, Materi, Evaluasi, Video, Petunjuk Dan Profil</string>
    <string name="welcome">Selamat Datang...</string>
    <string name="dashboard_home">DASHBOARD</string>
    <string name="sistem_saraf">Sistem Saraf</string>
    <string name="gangguan_sistem_regulasi">Gangguan Sistem Regulasi</string>
    <string name="sistem_saraf_tepi">Sistem Saraf Tepi</string>
    <string name="sistem_hormon">Sistem Hormon</string>
    <string name="sistem_indera">Sistem Indera</string>
    <string name="glosarium">Glosarium</string>
    <string name="evaluasi">Yuk dibaca evaluasinya !</string>
    <string name="eva">Evaluasi</string>
    <string name="nok_1">1</string>
    <string name="nok_2">2</string>
    <string name="nok_3">3</string>
    <string name="nok_4">4</string>
    <string name="nok_5">5</string>
    <string name="nok_6">6</string>
    <string name="nok_7">7</string>
    <string name="nok_8">8</string>
    <string name="nok_9">9</string>
    <string name="nok_10">10</string>
    <string name="cross_score">Your Score</string>
    <string name="mendatar">MENDATAR</string>
    <string name="menurun">MENURUN</string>
    <string name="soalcross1">Kumpulan badan-badan sel saraf </string>
    <string name="soalcross2">Otak besar </string>
    <string name="soalcross3">Hormon yang berperan dalam mengatur aktivitas tidur kita</string>
    <string name="soalcross4">Selaput otak berupa jaring, terletak antara piameter dan durameter</string>
    <string name="soalcross5">Pertemuan antara akson dengan dendrit atau efektor</string>
    <string name="soalcross6">Serabut saraf yang menyalurkan impuls ke badan sel </string>
    <string name="soalcross7">Neuron yang mentransmisikan impuls dari satu neuron ke neuron lain</string>
    <string name="soalcross8">Hormon yang berfungsi membantu metabolisme tubuh</string>
    <string name="soalcross9">Serabut saraf yang menyalurkan impuls dari badan sel</string>
    <string name="soalcross10">Pesan yang diterima oleh reseptor </string>
    <string name="p_cross1">Kumpulan badan-badan sel saraf </string>
    <string name="p_cross2">Otak besar </string>
    <string name="p_cross3">Hormon yang berperan dalam mengatur aktivitas tidur kita</string>
    <string name="p_cross4">Selaput otak berupa jaring, terletak antara piameter dan durameter</string>
    <string name="p_cross5">Pertemuan antara akson dengan dendrit atau efektor</string>
    <string name="p_cross6">Serabut saraf yang menyalurkan impuls ke badan sel </string>
    <string name="p_cross7">Neuron yang mentransmisikan impuls dari satu neuron ke neuron lain</string>
    <string name="p_cross8">Hormon yang berfungsi membantu metabolisme tubuh</string>
    <string name="p_cross9">Serabut saraf yang menyalurkan impuls dari badan sel</string>
    <string name="p_cross10">Pesan yang diterima oleh reseptor </string>
    <string name="j_cross1">1. GANGLION</string>
    <string name="j_cross2">2. CEREBRUM</string>
    <string name="j_cross3">3. MELATONIN </string>
    <string name="j_cross4">4. ARACHNOID</string>
    <string name="j_cross5">5. SINAPSIS</string>
    <string name="j_cross6">6. DENDRIT</string>
    <string name="j_cross7">7. INTERNEURON</string>
    <string name="j_cross8">8. TIROID</string>
    <string name="j_cross9">9. AKSON</string>
    <string name="j_cross10">10. IMPULS</string>
    <string name="chat_forum">Chat Forum</string>
    <string name="quiz">Quiz</string>
    <string name="highscore">HighScore: 0</string>
    <string name="profil">Profil Pemateri</string>
    <string name="materi_clue">Yuk dibaca materinya !</string>
    <string name="evaluasi_clue">Evaluasi</string>
    <string name="materi">Materi</string>
    <string name="play_video">Play Video</string>
    <string name="score">Score: 0</string>
    <string name="timer">00:20</string>
    <string name="question_1_x">Question 1/X</string>
    <string name="question">This is Question  This is Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_5">Option 5</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="select_ans_first">Select Ans First</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="ttdua">:</string>
    <string name="myscore">My Score :</string>
    <string name="kompetensi_dasar">Kompetensi Dasar</string>
    <string name="kompetensi_inti">Kompetensi Inti</string>
    <string name="facebook_application_id">facebook_application_id</string>
    <string name="batalkan">Batalkan</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="masukkan_nisn">Masukkan NISN</string>
    <string name="tambahkan_identitas">Tambahkan Identitas</string>
    <string name="welcome_to_discussion_forum">Selamat Datang di Forum Diskusi</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Buat Akun Untuk Masuk</string>
    <string name="author">author</string>
    <string name="time">time</string>
    <string name="start_discussion">Mulai Diskusi</string>
    <string name="discussion_forum">Forum Diskusi</string>
    <string name="body">body</string>
    <string name="type_message">Ketik pesan ...</string>
    <string name="indikator_pembelajaran">Indikator Pembelajaran</string>
    <string name="tujuan_pembelajaran">Tujuan Pembelajaran</string>
    <string name="userPemateri">Sitti Nurafiah</string>
    <string name="ttlPemateri">Sengkang, 7 Maret 1997</string>
    <string name="jkPemateri">Perempuan</string>
    <string name="gdPemateri">O</string>
    <string name="daPemateri">Sengkang, Kabupaten Wajo</string>
    <string name="alPemateri">Perum Bosowa Minasa Upa B5/18</string>
    <string name="agPemateri">Islam</string>
    <string name="psPemateri">Pendidikan Biologi</string>
    <string name="hpPemateri">081242182583</string>
    <string name="namaa">Nama</string>
    <string name="tempat_tanggal_lahir">Tempat/Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="daerah_asal">Daerah Asal</string>
    <string name="alamat">Alamat</string>
    <string name="agama">Agama</string>
    <string name="program_studi">Program Studi</string>
    <string name="pendidikan_biologi">Pendidikan Biologi</string>
    <string name="no_hp">No. Hp</string>
    <string name="universitas">Universitas Negeri Makassar</string>
    <string name="soal1">Berikut adalah beberapa sistem organ yang terdapat dalam tubuh manusia:\n
        1. Sistem saraf;\n
        2. Sistem peredaran darah;\n
        3. Sistem endokrin;\n
        4. Sistem indra.
    </string>
    <string name="opsiA_1">a. 1, 2, 3</string>
    <string name="opsiB_1">b. 1, 3, 4</string>
    <string name="opsiC_1">c. 2, 3, 4</string>
    <string name="opsiD_1">d. 1, 4</string>
    <string name="opsiE_1">e. 1, 2, 3, 4</string>
    <string name="clue1">Sistem organ yang termasuk kedalam sistem koordinasi yaitu: sistem saraf, sistem endokrin dan sistem indra.</string>
    <string name="soal2">Perhatikan gambar sel saraf berikut!\n Bagian yang bernomor 1,2, dan 3 berturut-turut adalah ….</string>
    <string name="gambar2">gambar2.png</string>
    <string name="opsiA_2">a. Dendrit, akson, dan badan sel</string>
    <string name="opsiB_2">b. Nukleus, dendrit, dan sel schwann</string>
    <string name="opsiC_2">c. Dendrit, nukleus, dan badan sel</string>
    <string name="opsiD_2">d. Akson, nukleus, dan badan sel</string>
    <string name="opsiE_2">e. Sel schwann, akson, dan badan sel</string>
    <string name="clue2">Dendrit, nukleus, dan badan sel</string>
    <string name="soal3">Susunan saraf pusat manusia terdiri dari ….</string>
    <string name="opsiA_3">a. Otak dan serabut saraf</string>
    <string name="opsiB_3">b. Sumsum lanjutan dan serabut saraf</string>
    <string name="opsiC_3">c. Sumsum lanjutan dan otak</string>
    <string name="opsiD_3">d. Saraf sadar dan saraf tak sadar</string>
    <string name="opsiE_3">e. Otak dan sumsum tulang belakang</string>
    <string name="clue3">Susunan sistem saraf manusia terdiri atas otak dan sum-sum tulang belakang</string>
    <string name="soal4">Bagian otak besar yang berperan dalam ingatan dan emosi adalah lobus ….</string>
    <string name="opsiA_4">a. Frontalis</string>
    <string name="opsiB_4">b. Temporalis</string>
    <string name="opsiC_4">c. Parietalis</string>
    <string name="opsiD_4">d. Oksipitalis</string>
    <string name="opsiE_4">e. Anterior</string>
    <string name="clue4">Bagian otak yang berperan penting dalam ingatan dan emosi adalah lobus frontalis</string>
    <string name="soal5">Berikut ini adalah pengaruh dari saraf simpatik pada kerja organ tubuh, kecuali ….</string>
    <string name="opsiA_5">a. Mempercepat denyut jantung.</string>
    <string name="opsiB_5">b. Memperbesar pupil mata.</string>
    <string name="opsiC_5">c. Mempercepat proses pencernaan.</string>
    <string name="opsiD_5">d. Menghambat keluarnya air ludah.</string>
    <string name="opsiE_5">e. Menghambat kontraksi kandung kemih.</string>
    <string name="clue5">Beberapa pengaruh dari saraf simpatik pada kerja organ tubuh yaitu mempercepat denyut jantung, memperbesar pupil mata, menghambat keluarnya air ludah dan menghambat kontraksi kandung kemih. </string>
    <string name="soal6">Neuron yang berfungsi menghantarkan impuls saraf dari alat indera menuju ke otak atau sumsum tulang belakang adalah ….</string>
    <string name="opsiA_6">a. Neuron bipolar</string>
    <string name="opsiB_6">b. Neuron sensorik</string>
    <string name="opsiC_6">c. Neuron motorik</string>
    <string name="opsiD_6">d. Neuron konektor</string>
    <string name="opsiE_6">e. Neuron unipolar</string>
    <string name="clue6">Neuron yang berfungsi menghantarkan impuls saraf dari alat indera menuju ke otak atau sumsum tulang belakang yaitu neuron sensorik</string>
    <string name="soal7">Jika proses gerak yang diatur oleh sistem saraf disadari, impuls akan menempuh jalan sebagai berikut ….</string>
    <string name="opsiA_7">a. Reseptor → neuron sensorik → otak → neuron motorik → efektor</string>
    <string name="opsiB_7">b. Reseptor → neuron sensorik → interneuron → neuron motorik → efektor</string>
    <string name="opsiC_7">c. Reseptor → neuron motorik → otak → neuron sensorik → efektor</string>
    <string name="opsiD_7">d. Reseptor → neuron motorik → sumsum tulang belakang → efektor</string>
    <string name="opsiE_7">e. Reseptor → neuron sensorik → neuron konektor → otak → efektor</string>
    <string name="clue7">proses jalannya impuls dimulai dari resptor atau indra kemudian diteruskan ke neuron sensorik kemudian diteruskan ke otak kemudian diteruskan ke neuron motorik dan diteruskan ke efektor</string>
    <string name="soal8">Sistem saraf keseimbangan disebut juga…</string>
    <string name="opsiA_8">a. Fotoreseptor</string>
    <string name="opsiB_8">b. Fonoreseptor</string>
    <string name="opsiC_8">c. Kemoreseptor</string>
    <string name="playcross">PLAY</string>
    <string name="exitcross">EXIT</string>
    <string name="crossword">Crossword</string>
</resources>