<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambahkan_identitas"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/biru"
        android:textStyle="bold"
        android:layout_marginBottom="7dp"/>
    <EditText
        android:layout_margin="3dp"
        android:id="@+id/dialogNameEt"
        android:hint="@string/masukkan_nama_lengkap"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_margin="3dp"
        android:id="@+id/dialogNisnEt"
        android:hint="@string/masukkan_nisn"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="7dp">
        <Button
            android:background="@color/birusoft"
            android:layout_weight="1"
            android:id="@+id/dialogBtnBatal"
            android:text="@string/batalkan"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:background="@color/biru"
            android:layout_weight="1"
            android:id="@+id/dialogBtnTambah"
            android:text="@string/tambahkan"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>