<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    app:cardCornerRadius="2dp"
    android:elevation="2dp"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvAuthorItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author"
                android:textStyle="bold"
                android:textColor="@color/biru"/>

            <TextView
                android:id="@+id/tvTimeItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textSize="12sp"
                android:textAlignment="textEnd"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvBodyItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>